<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical">

    <!-- Franja superior celeste -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/azul_principal" />

    <!-- Sección central blanca e iconos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/iv_home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_1_home"
            android:contentDescription="@string/home"
            android:layout_marginEnd="15dp"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_2_settings"
            android:contentDescription="@string/settings"
            android:layout_marginEnd="15dp"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_3_logout"
            android:contentDescription="@string/logout"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <!-- Franja inferior celeste -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/azul_principal" />

</LinearLayout>